src/app/core/components/left-nav-tree/left-nav-tree.component.scss
@import "src/colors.scss";
$bk-secondary: #3B73B4;

.tree-header {
  background-color: $base-color;
  height: 6rem;
  display: flex;
  align-items: center;
  border-bottom: .1rem solid #4587D4;
  cursor: pointer;

  .tree-header-handle {
    display: flex;
    height: 3.5rem;
    width: 5rem;
    margin-right: 1rem;
    background-color: $bk-secondary;
    border-top-right-radius: 1.5rem;
    border-bottom-right-radius: 1.5rem;
    color: white;
    align-items: center;
    font-size: 1.5rem;

    i:first-child {
      margin-right: 1rem;
      margin-left: .5rem;
      color: rgb(99, 150, 209);
    }

    .icon-folder {
      height: 2.1rem;
    }
  }

  .tree-header-title {
    font-size: 1.6rem;
    letter-spacing: .01em;
    font-weight: bold;
    text-transform: uppercase;
    color: white;
  }
}

:host ::ng-deep .p-tree {
  width: 100%;
  background-color: $base-color !important;
  border: none;
  padding: 0;
  border-radius: 0;
}

:host ::ng-deep .p-tree-container {
  padding: 0 !important;
}

:host ::ng-deep .p-tree-toggler {
  display: none !important;
}

:host ::ng-deep .p-checkbox {
  display: none !important;
}

:host ::ng-deep .p-treenode-label {
  width: 100%;
  color: #fff !important;
  padding: 0 !important;
}

:host ::ng-deep .p-treenode {
  padding: 0 !important;
}

:host ::ng-deep .p-treenode-content {
  border: none !important;
}

:host
  ::ng-deep
  .p-tree
  .p-tree-container
  .p-treenode
  .p-treenode-content:focus {
  outline: none;
  box-shadow: none;
}

:host ::ng-deep .p-treenode-icon {
  margin: 0 !important;
}

:host ::ng-deep .p-treenode-children {
  padding-left: 3rem !important;
}

/* :host ::ng-deep p-treenode:last-child > .p-treenode > .p-treenode-children {
  border-left: .1rem solid transparent;
} */

:host ::ng-deep .p-treenode-children {
  border-left: .1rem solid #2e5e95;
}

:host
  ::ng-deep
  .p-tree-container
  > p-treenode
  > .p-treenode
  > .p-treenode-children {
  border-left: .1rem solid transparent;
}

:host
  ::ng-deep
  .p-tree-container
  > p-treenode
  > .p-treenode
  > .p-treenode-children
  > p-treenode:last-child
  > .p-treenode
  > .p-treenode-content
  .node-tree-item
  .node-item-branch
  .bottom-branch {
  border-left: .1rem solid #2e5e95;
}

:host
  ::ng-deep
  p-treenode:last-child
  > .p-treenode
  > .p-treenode-content
  .node-tree-item
  .node-item-branch
  .bottom-branch {
  border-right: none;
  border-left: none;
}

:host
  ::ng-deep
  p-treenode:first-child
  > .p-treenode
  > .p-treenode-content
  .node-tree-item
  .node-item-branch
  .top-branch {
  border-right: none;
}

:host ::ng-deep .p-treenode-children .node-tree-item {
  .node-item-branch {
    .top-branch {
      border-left: .1rem solid #2e5e95;
      border-bottom: .1rem solid #2e5e95;
      border-right: none;
    }

    .bottom-branch {
      border-left: .1rem solid #2e5e95;
      border-right: none;
    }
  }
}

:host ::ng-deep .p-treenode-children .node-tree-item.folder.expanded .node-item-branch .bottom-branch {
  border-right: .1rem solid #2e5e95;
}


:host ::ng-deep .p-treenode-content {

  padding: 0em !important;

  &:focus {
    .node-tree-item .node-item-content {
      &.unlocked {
        border-top-left-radius: 0.5rem;
        border-bottom-left-radius: 0.5rem;
        background-color: rgba(white, 0.2);
        color: white;

        .node-select {
          color: #fff;
          background-color: #f5a623;
          border-radius: 9rem;
        }
      }
    }
  }

  .node-tree-item {
    width: 100%;
    display: block;
    flex-direction: row;
    align-items: center;
    min-height: 4.5rem;
    position: relative;
    cursor: pointer;

    .node-item-branch {
      display: block;
      width: 3.1667rem;
      min-height: 4.1667rem;
      z-index: 10;

      .top-branch {
        display: block;
        border-right: .1rem solid #2e5e95;
        min-height: 2.0833rem;
        position: relative;

        .mask-branch {
          display: block;
          position: absolute;
          right: -.1rem;
          width: 1.3333rem;
          bottom: -.1rem;
          height: 1.25rem;
          background-color: $base-color;
        }
      }

      .bottom-branch {
        display: block;
        border-right: .1rem solid #2e5e95;
        min-height: 2.0833rem;
        position: relative;

        .mask-branch {
          display: block;
          position: absolute;
          right: -.1rem;
          width: 0.1667rem;
          top: 0;
          height: 1.25rem;
          background-color: $base-color;
        }
      }
    }

    .node-item-content {
      padding: 0 0.25rem;
      position: absolute;
      display: block;
      border-bottom: .1rem solid #4587d4;
      padding-right: 1.6667rem;
      top: 0;
      bottom: 0;
      left: 1.25rem;
      right: 0;

      .node-select {
        width: 2.5rem;
        height: 2.5rem;
        margin-right: 1.25rem;
        margin-left: 0.4167rem;
        text-align: center;
        position: absolute;
        top: 50%;
        margin-top: -1.25rem;
        color: #f5a623;
        z-index: 11;
        display: flex;
        align-items: center;
        justify-content: center;

        i {
          line-height: 2.5rem;
        }

        alg-score-ring {
          width: 100%;
          height: 100%;
        }
      }

      &.node-bottom-radius {
        border-bottom-right-radius: 0.5rem;
      }

      .node-icon {
        display: flex;
        align-items: center;
        justify-content: center;
        margin-right: 1.1667rem;
      }

      .fade {
        opacity: 50%;
      }

      .node-label {
        top: 0;
        bottom: 0;
        left: 4.1667rem;
        right: 0;
        position: absolute;
        display: block;
        padding-right: 1.6667rem;

        .label-container {
          display: flex;
          margin-top: 1.1rem;
        }

        .node-state {
          margin-left: auto;

          i {
            margin-left: 0.5rem;
          }
        }

        .node-label-title {
          font-family: "titillium";
          overflow: hidden;
          white-space: nowrap;
          text-overflow: ellipsis;
          margin-right: 1rem;
          font-size: 1.2rem;
          font-weight: 700;

          &.locked {
            color: #cacaca;
          }
        }

        alg-skill-progress {
          position: absolute;
          left: 0;
          right: 1.25rem;
          bottom: 0;
        }
      }
    }

    &.expanded .folder-branch {
      position: relative;
    }

    &.current {
      .node-item-content {
        border-top-left-radius: 0.5rem;
        border-bottom-left-radius: 0.5rem;
        background-color: $base-bk-color;
        color: $base-color;

        &:before,
        &:after {
          content:" ";
          background-image: url("/assets/images/corner-white.svg");
          background-repeat: no-repeat;
          background-size: cover;
          width: 1rem;
          height: 1rem;
          position: absolute;
          right:0;
          top: -1rem;
        }

        &:after {
          top: auto;
          bottom: -1rem;
          background-position: bottom;
        }

        .node-select {
          color: #fff;
          background-color: #f5a623;
          border-radius: 9rem;
        }
      }
    }

  }
}

